[project]
name = "agentes"
version = "0.1.0"
description = "Agente de IA para búsqueda bibliográfica en psicología clínica. Busca en PubMed, OpenAlex, Semantic Scholar y CrossRef, selecciona los papers más relevantes con justificación clínica."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai>=1.105.0",
    "nicegui>=1.4.0",
    "fpdf2>=2.8.0",
]
